# homework4

./: .gitignore  CMakeLists.txt  Chooser.hpp  Demo.cpp  Guesser.hpp  Makefile  SmartGuesser.cpp  SmartGuesser.hpp  badkan.hpp  calculate.cpp  calculate.hpp  play.cpp  typedefs.h
